<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="5dp"
    android:layout_width="170dp"
    android:layout_height="190dp"
    android:background="@drawable/rounded_item"
    android:elevation="8dp"
    android:clipChildren="false">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHistoryImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/imageViewHistory"
            android:backgroundTint="@color/grey_1"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:background="@drawable/rounded_item"
            tools:src="@tools:sample/avatars" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/bahanHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/bahan_placeholder_text"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/freshnessHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/rotten"
            android:textColor="@color/rotten_freshcan"
            android:textSize="17sp"
            android:textStyle="bold"
            android:shadowColor="@color/grey_shadow"
            android:shadowDx="8"
            android:shadowDy="8"
            android:shadowRadius="8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tanggalHistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tanggal_dummy"
            android:textColor="@color/grey_1"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bahanHistoryText" />

    </androidx.constraintlayout.widget.ConstraintLayout>





</androidx.appcompat.widget.LinearLayoutCompat>